<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btnInfo"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/info_main"
        android:src="@drawable/ic_menu_white"
        app:tint="@color/white" />

    <!-- FRONT -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFrontTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_time_menu"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvFrontPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_raw_menu"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvFrontTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_temperature_menu"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dotFront"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:importantForAccessibility="no"
                android:src="@drawable/dot_shape"
                app:tint="@color/red" />

            <TextView
                android:id="@+id/tvFrontRssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/signal_main"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <!-- REAR -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRearTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_time_menu"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvRearPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_raw_menu"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tvRearTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial_temperature_menu"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/dotRear"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:importantForAccessibility="no"
                android:src="@drawable/dot_shape"
                app:tint="@color/red" />

            <TextView
                android:id="@+id/tvRearRssi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/signal_main"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/status_hint"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <!-- For Debug -->
    <ScrollView
        android:id="@+id/debugScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#111"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvDebug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textIsSelectable="true"
            android:textSize="12sp" />
    </ScrollView>


</LinearLayout>
